// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article html Header getStandFirst should display LargeByline Header Type with Opinion Article Type 1`] = `
"
            <section class=\\"header-top\\">
                <div class=\\"\\">
                    
            <h1>
                <span class=\\"header-top-headline\\"
                    ><Quotes />Test Headline
                </span>
                
                        <span class=\\"header-top-byline\\"
                            ><p>Test Byline</p>
                        </span>
                    
            </h1>
        
                    
                </div>
            </section>
        "
`;

exports[`article html Header getStandFirst should display LargeByline Header Type with Opinion Article Type with a cutout image 1`] = `
"
            <section class=\\"header-top\\">
                <div class=\\"header-opinion-flex\\">
                    
            <h1>
                <span class=\\"header-top-headline\\"
                    ><Quotes />Test Headline
                </span>
                
                        <span class=\\"header-top-byline\\"
                            ><p>Test Byline</p>
                        </span>
                    
            </h1>
        
                    
                            <div>
                                
        <img class=\\"\\" src=\\"\\" />
    
                            </div>
                        
                </div>
            </section>
        "
`;

exports[`article html Header getStandFirst should display LargeByline Header Type with Opinion Article Type with a cutout space 1`] = `
"
            <section class=\\"header-top\\">
                <div class=\\"header-opinion-flex\\">
                    
            <h1>
                <span class=\\"header-top-headline\\"
                    ><Quotes />Test Headline
                </span>
                
                        <span class=\\"header-top-byline\\"
                            ><p>Test Byline</p>
                        </span>
                    
            </h1>
        
                    
                </div>
            </section>
        "
`;

exports[`article html Header getStandFirst should display LargeByline Header Type with alternative Article Type with a cutout image 1`] = `
"
            <section class=\\"header-top\\">
                <div class=\\"\\">
                    
            <h1>
                <span class=\\"header-top-headline\\"
                    >Test Headline
                </span>
                
                        <span class=\\"header-top-byline\\"
                            ><p>Test Byline</p>
                        </span>
                    
            </h1>
        
                    
                </div>
            </section>
        "
`;

exports[`article html Header getStandFirst should display NoByline Header Type, show only the headline 1`] = `
"
            <section class=\\"header-top\\">
                
            <h1>
                Test Headline
            </h1>
        
                
            </section>
        "
`;

exports[`article html Header getStandFirst should display RegularByline Header Type, show a standfirst with the headline 1`] = `
"
            <section class=\\"header-top\\">
                
            <h1>
                Test Headline
            </h1>
        
                
        <p
            
        >
            Test Standfirst
        </p>
    
            </section>
        "
`;
